traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:21: warning: enclosing method estSurPositionFinale has result type Unit: return value discarded
  return(res)  
  ^Snake:26: error: value unary_! is not a member of Unit
  while (!(estSurPositionFinale())){
         ^